syntax/tests/parsing/errors/typeDef/polyvariant.js
type t = [< ]

type t = [ s ]

type z = [< | #A | #B > ]

type rec t = []

